Fixed bug: can not load session on command line on Windows
git-svn-id: http://chianti.ucsd.edu/svn@21039 0ecc0d97-ab19-0410-9704-bfe1a75892f5